[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = jwreftools
description = JWST Pipeline Tools
long_description = Tools to create reference files for the JWST pipeline
author = JWST Reference Tools developers
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/jwreftools
edit_on_github = False
github_project = spacetelescope/jwreftools

[entry_points]
astropy-package-template-example = packagename.example_mod:main